{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 47,
  "lineage": "8d7e13e5-d9dd-669f-c2cd-b91075ca3966",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_swvl",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.125.201.15",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-04-05T14:36:03.922-07:00",
            "id": "projects/triple-voyage-278712/regions/us-west4/addresses/static-swvl",
            "name": "static-swvl",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "triple-voyage-278712",
            "region": "us-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-voyage-278712/regions/us-west4/addresses/static-swvl",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/triple-voyage-278712/zones/us-west4-a/instances/swvl-bonus"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "swvl_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-04-05T14:36:03.784-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/triple-voyage-278712/global/firewalls/webserver2",
            "log_config": [],
            "name": "webserver2",
            "network": "https://www.googleapis.com/compute/v1/projects/triple-voyage-278712/global/networks/default",
            "priority": 1000,
            "project": "triple-voyage-278712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-voyage-278712/global/firewalls/webserver2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "swvl_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-04-05T14:36:03.910-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/triple-voyage-278712/global/firewalls/externalssh2",
            "log_config": [],
            "name": "externalssh2",
            "network": "https://www.googleapis.com/compute/v1/projects/triple-voyage-278712/global/networks/default",
            "priority": 1000,
            "project": "triple-voyage-278712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-voyage-278712/global/firewalls/externalssh2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "swvl_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220303",
                    "size": 20,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/triple-voyage-278712/zones/us-west4-a/disks/swvl-bonus"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/triple-voyage-278712/zones/us-west4-a/instances/swvl-bonus",
            "instance_id": "5010325408334284990",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "c2-standard-4",
            "metadata": {
              "ssh-keys": "marwan:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC3gp0+KvVb9cnCPQZroUYyes2b8AOsB20aei69+OAMf4AC2toTJggHNHPOkO9Kk+VnqsfWdD+6gbYsKTs8OjBYccni9Dg2lFDoGgRb6UCm2H5qCkfgsJJRA9ID0CxNiFPpTRuDZ+cNkWz3W7xCkN/cQccFkSp3flydr9Q5CKPS5wq+gI+MEe73IeJC78jD2pf0kt3kWwHDPhMFA59hWzFBLRLBxR4/g9znuCfYfUKGjX9mL244tHmIRJHEpBffQ42nmQEdYoCi3rfdN/4+k6TDirOTx9lAhQGHkb5zUWsfFxu++TK0tQvngY2s6sIAlUgg8PAJ14E5tFSvk55SnE8JEVmoWoPosKjlOmhV3yJ6UzOYFdpeD5uspXge7z84DCq3/s+voukh25/0EijVFf5NYYcw7SVfyLkWjHOSiY/LkV [...]
            },
            "metadata_fingerprint": "9gG70HaK2N8=",
            "name": "swvl-bonus",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.125.201.15",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/triple-voyage-278712/global/networks/default",
                "network_ip": "10.182.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/triple-voyage-278712/regions/us-west4/subnetworks/default",
                "subnetwork_project": "triple-voyage-278712"
              }
            ],
            "project": "triple-voyage-278712",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-voyage-278712/zones/us-west4-a/instances/swvl-bonus",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "us-west4-a"
          },
          "dependencies": [
            "google_compute_address.static_swvl"
          ]
        }
      ]
    }
  ]
}